--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
+# Environment files
+src/environments/environment.ts
+src/environments/environment.prod.ts
+
+# Local configuration
+capacitor.config.ts
+
+# API keys and secrets
+**/*.key
+**/*.pem
+**/google-services.json
+**/GoogleService-Info.plist
 *~
 *.sw[mnpcod]
 .tmp
